tests/ui/snapshots/expected_expression.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0115",
    "severity": "error",
    "phase": "parse",
    "title": "expected an expression, found `}`",
    "primary_span": {
      "file": "expected_expression.ply",
      "start": [
        3,
        1
      ],
      "end": [
        3,
        2
      ]
    },
    "fixes": [],
    "worklist_ref": null
  }
]
