tests/ui/snapshots/expected_expression.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0115]: expected an expression, found `}`
 --> expected_expression.ply:3:1
  |
 3| }
  | ^

1 error
