tests/ui/snapshots/expected_item.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0116]: expected an item (`fn`, `struct`, `enum`, `use`, `rules`, `machine`), found identifier
 --> expected_item.ply:3:1
  |
 3| wat
  | ^^^

1 error
