tests/ui/snapshots/machine_without_states.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0122",
    "severity": "error",
    "phase": "parse",
    "title": "a machine begins with a `states` chain, e.g. `states Draft -> Placed;`, found identifier",
    "primary_span": {
      "file": "machine_without_states.ply",
      "start": [
        2,
        5
      ],
      "end": [
        2,
        10
      ]
    },
    "fixes": [],
    "worklist_ref": null
  }
]
