tests/ui/snapshots/machine_without_states.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0122]: a machine begins with a `states` chain, e.g. `states Draft -> Placed;`, found identifier
 --> machine_without_states.ply:2:5
  |
 2|     Draft -> Placed;
  |     ^^^^^

1 error
