tests/ui/snapshots/malformed_integer.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0106",
    "severity": "error",
    "phase": "lex",
    "title": "`123abc` is not a valid integer literal",
    "primary_span": {
      "file": "malformed_integer.ply",
      "start": [
        2,
        5
      ],
      "end": [
        2,
        11
      ]
    },
    "fixes": [],
    "worklist_ref": null
  },
  {
    "code": "E0110",
    "severity": "error",
    "phase": "parse",
    "title": "expected `;`, found identifier",
    "primary_span": {
      "file": "malformed_integer.ply",
      "start": [
        2,
        8
      ],
      "end": [
        2,
        8
      ]
    },
    "fixes": [
      {
        "title": "add `;`",
        "edits": [
          {
            "span": {
              "file": "malformed_integer.ply",
              "start": [
                2,
                8
              ],
              "end": [
                2,
                8
              ]
            },
            "insert": ";"
          }
        ]
      }
    ],
    "worklist_ref": null
  }
]
