tests/ui/snapshots/malformed_integer.txt.snap
---
source: crates/ply-driver/tests/ui.rs
---
error[E0106]: `123abc` is not a valid integer literal
 --> malformed_integer.ply:2:5
  |
 2|     123abc
  |     ^^^^^^

error[E0110]: expected `;`, found identifier
 --> malformed_integer.ply:2:8
  |
 2|     123abc
  |        ^
help: add `;`
 2|     123;abc

2 errors
