tests/ui/snapshots/missing_param_type.json.snap
---
source: crates/ply-driver/tests/ui.rs
---
[
  {
    "code": "E0113",
    "severity": "error",
    "phase": "parse",
    "title": "parameter `x` needs a type annotation, e.g. `x: Int`",
    "primary_span": {
      "file": "missing_param_type.ply",
      "start": [
        1,
        11
      ],
      "end": [
        1,
        12
      ]
    },
    "fixes": [],
    "worklist_ref": null
  }
]
